# ext-infer

./: .ext-template.conf  Cargo.toml  Makefile  PLAN.md  README.md  RELEASE.md  THIRD-PARTY-NOTICES.md  about.hbs  build.rs  composer.json
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: .gitignore  book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/advanced/: metal.md  performance.md  threading.md
docs/src/contributing/: building.md  releasing.md  testing.md
docs/src/getting-started/: installation.md  quick-start.md  verifying.md
docs/src/guide/: chat.md  embeddings.md  models.md  options.md  prompts.md  raw.md  reranking.md  structured-output.md
docs/src/recipes/: multi-turn-chat.md  rag-with-php.md  reasoning-models.md  semantic-search.md  worker-pools.md
docs/src/reference/: api.md  compatibility.md  environment.md  (+1 more)
examples/: README.md  embedding.php  hello-world.php
examples/chat-interactive/: README.md  composer.json
src/: embedding.rs  error.rs  grammar.rs  lib.rs  model.rs  prompt.rs  rerank.rs  response.rs
stubs/: infer.stubs.php
tests/phpt/: 001-load-missing-file.phpt  002-construct-throws.phpt  003-load-success.phpt  004-chat-basic.phpt  004-complete-basic.phpt  005-after-close.phpt  005-complete-after-close.phpt  006-close-idempotent.phpt  007-strip-thinking.phpt  008-prompt-builder.phpt  009-response-class-shape.phpt  010-raw-basic.phpt  011-chat-reasoning-split.phpt  012-embedding.phpt  013-embedding-packed.phpt  014-grammar-constrained.phpt  015-grammar-errors.phpt  016-rerank.phpt
(+1 files in other folders)
